# vix-registry

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  architecture.md
config/: config.dev.json
include/vix/registry/: App.hpp
include/vix/registry/db/: Database.hpp
include/vix/registry/domain/: Package.hpp  Token.hpp  User.hpp  Version.hpp  errors.hpp
include/vix/registry/http/: HttpServer.hpp
migrations/: 0001_init_schema.sql  0002_add_tokens.sql
src/: App.cpp  main.cpp
src/db/: Database.cpp
src/domain/: Package.cpp  Token.cpp  User.cpp  Version.cpp
src/http/: HttpServer.cpp
tests/: CMakeLists.txt
tests/unit/: db_connection_test.cpp
